--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
 
   </main>
 
-  <footer>
-    &copy; 2026 Wisdom in Motion
-  </footer>
+<footer>
+  <p>&copy; 2026 Wisdom in Motion</p>
+  <p class="footer-email">
+    If you enjoyed the essays, feel free to <a href="thibaultkreutzer@yahoo.de">write me a kind word</a>.
+  </p>
+</footer>
 
 </body>
 </html>
