--- a/essays/poem.html
+++ b/essays/poem.html
@@ -85,7 +85,7 @@
       Love is a skill that takes great effort<br>
       Patience, kindness and humility<br>
       will be your allies on this journey<br>
-      For mutual meeting is not without discomfort</p>
+      For meeting demands we risk discomfort</p>
 
       <p>As vulnerability comes with closeness,<br>
       their words may hurt us at our core<br>
@@ -95,8 +95,14 @@
       Merely two truths within two people,<br>
       who deep down wish to be seen and understood</p>
 
-       <p>For only the opening of the mind<br>
-      can prevent the closure of the heart</p>
+      <p>For only the opening of the mind<br>
+      can prevent the closure of the heart<br>
+      Some will find refuge through distance instead<br>
+      For repair demands we face our deeper parts,<br>
+      the questioning of ourselves may feel too great<br>
+      As two truths demand gentle wisdom<br>
+      For love, true love, is never an easy task</p>
+
 
     </div>
 
