--- a/essays/poem.html
+++ b/essays/poem.html
@@ -91,17 +91,17 @@
       their words may hurt us at our core<br>
       Yet the presence we must hold<br>
       requires humility and courage<br>
-      And to realize that reality does not exist<br>
+      And to acknowledge that reality does not exist<br>
       Merely two truths within two people,<br>
       who deep down wish to be seen and understood</p>
 
       <p>For only the opening of the mind<br>
       can prevent the closure of the heart<br>
       Some will find refuge through distance instead<br>
-      For repair demands we face our deeper parts,<br>
-      the questioning of ourselves may feel too great<br>
-      As two truths demand gentle wisdom<br>
-      For love, true love, is never an easy task</p>
+      for repair demands we face our deeper parts<br>
+      And thus questioning ourselves may overwhelm us<br>
+      Yet holding two truths demands gentle wisdom<br>
+      for love, true love, is never an easy task</p>
 
 
     </div>
