--- a/poem.html
+++ b/poem.html
@@ -93,15 +93,15 @@
       requires humility and courage<br>
       And to acknowledge that reality does not exist<br>
       Merely two truths within two people,<br>
-      who deep down wish to be seen and understood</p>
+      who wish to be seen and understood</p>
 
       <p>For only the opening of the mind<br>
       can prevent the closure of the heart<br>
       Some will find refuge through distance instead<br>
-      for repair demands we face our deeper parts<br>
-      And thus questioning ourselves may overwhelm us<br>
-      Yet holding two truths demands gentle wisdom<br>
-      for love, true love, is never an easy task</p>
+      for repair demands we face our hidden parts<br>
+      And thus such questioning may overwhelm<br>
+      Through gentle wisdom can we hold two truths<br>
+      For love, true love, is never an easy task</p>
 
 
     </div>
