--- a/essays/trail-running.html
+++ b/essays/trail-running.html
@@ -35,8 +35,9 @@
                   <p>Covering great distances while fully immersed in nature, the awakening of the senses and the lightness of carrying so little—these provide a specific kind of freedom, one that heals precisely because it demands our complete presence. What we carry back is not merely exhaustion and the satisfaction of having seen new places, but also a quiet transformation: the clarity and peace that come from confronting ourselves.</p>
 
 
-    <p class="meta">Published on <strong>25/12/25</strong> | Updated on <strong>26/12/25</strong> </p>
-  </article>
+    <p class="meta">
+  Published on <strong>25/12/25</strong> | Updated on <strong>26/12/25</strong>
+</p>
 
   <footer>
     <a href="../index.html">← Back to all essays</a>
