--- a/essays/trail-running.html
+++ b/essays/trail-running.html
@@ -36,13 +36,16 @@
 
 
     <p class="meta">
-  Published on <strong>25/12/25</strong> | Updated on <strong>26/12/25</strong>
-</p>
+      Published on <strong>25/12/25</strong> | Updated on <strong>26/12/25</strong>
+    </p>
 
+ </article>
+
+<div class="essay-footer-container">
   <footer>
     <a href="../index.html">← Back to all essays</a>
   </footer>
-</main>
+</div>
 
 </body>
 </html>
