--- a/essays/poem.html
+++ b/essays/poem.html
@@ -85,7 +85,7 @@
       Love is a skill that takes great effort<br>
       Patience, kindness and humility<br>
       will be your allies on this journey<br>
-      For meeting demands we risk discomfort</p>
+      For an encounter demands we risk discomfort</p>
 
       <p>As vulnerability comes with closeness,<br>
       their words may hurt us at our core<br>
@@ -100,7 +100,7 @@
       Some will find refuge through distance instead<br>
       for repair demands we face our hidden parts<br>
       And thus such questioning may overwhelm<br>
-      Through gentle wisdom can we hold two truths<br>
+      Yet two truths can be held through gentle wisdom<br>
       For love, true love, is never an easy task</p>
 
 
