--- a/essays/poem.html
+++ b/essays/poem.html
@@ -85,10 +85,10 @@
       Love is a skill that takes great effort<br>
       Patience, kindness and humility<br>
       will be your allies on this journey<br>
-      For an encounter demands we risk discomfort</p>
+      For an encounter may bear discomfort</p>
 
-      <p>As vulnerability comes with closeness,<br>
-      their words may hurt us at our core<br>
+      <p>For vulnerability comes with closeness<br>
+      and their words may hurt us at our core<br>
       Yet the presence we must hold<br>
       requires humility and courage<br>
       And to acknowledge that reality does not exist<br>
@@ -97,10 +97,10 @@
 
       <p>For only the opening of the mind<br>
       can prevent the closure of the heart<br>
-      Some will find refuge through distance instead<br>
+      One might find refuge through distance instead<br>
       for repair demands we face our hidden parts<br>
       And thus such questioning may overwhelm<br>
-      Yet two truths can be held<br>
+      Yet, two truths can be held<br>
       through gentle wisdom<br>
       For love, true love, is never an easy task</p>
 
