--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <footer>
   <p>&copy; 2026 Wisdom in Motion</p>
   <p class="footer-email">
-    If you enjoyed the essays, feel free to <a href="thibaultkreutzer@yahoo.de">write me a kind word</a>.
+    If you enjoyed the essays, feel free to <a href="mailto:thibaultkreutzer@yahoo.de">write me a kind word</a>.
   </p>
 </footer>
 
