--- a/essays/presence_through_breathing.html
+++ b/essays/presence_through_breathing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Presence through breathing</title>
+  <title>The mental benefits of deep breathing</title>
   <link rel="stylesheet" href="../styles.css?v=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -10,12 +10,12 @@
 
 <main class="container">
   <article>
-  <h2>Presence through breathing</h2>
+  <h2>The mental benefits of deep breathing</h2>
 
     <!-- Paste your paragraphs here -->
     <p>A great majority of people will say that life is accelerating the older they get, that the years seem to slip away and before they realise, ten seasons will have passed. This is partly due to a change of perception, in other words, how we experience time. With our life being in constant hustle and our attention distracted by the firm grip of our digital devices, we do not take the time to contemplate the recent past. Too agitated is our mind to stay focused, to simply revisit what was lived. Yet, its exploration can extend our lives significantly as we take notice of forgotten memories – its formation not merely dependent on the occurrence of events, but on the depth of attention we bring to them. When the mind races perpetually forward—planning, anticipating, responding to endless notifications—it registers only superficially. The impressions we gather pass through us without leaving lasting imprints. The weeks blur together not because nothing happened, but because we were not truly present when it did.</p>
       
-      <p>This is where the practice of conscious breathing reveals its unexpected value. The Wim Hof method, named after the man who created it, with its cycles of deep inhalation and prolonged retention, functions as more than physiological training. It serves as an anchor, pulling awareness back into the immediate present. During those thirty to fifty deep breaths and the subsequent holding before the beginning of the next cycle, there is no room for distraction. The body demands full attention—the rhythm of air moving in and out, the tingling in the extremities as our blood becomes more alkaline, the subtle shifts in consciousness as the practice unfolds. The mind, so accustomed to wandering, finds itself naturally tethered to something undeniably real: the breath, the body, the present moment.</p>
+      <p>This is where the practice of conscious breathing reveals its unexpected value. The Wim Hof method, named after the man who created it, with its cycles of deep inhalation and prolonged retention, provides more than mere physiological training. It serves as an anchor, pulling awareness back into the immediate present. During those thirty to fifty deep breaths and the subsequent holding before the beginning of the next cycle, there is no room for distraction. The body demands full attention—the rhythm of air moving in and out, the tingling in the extremities as our blood becomes more alkaline, the subtle shifts in consciousness as the practice unfolds. The mind, so accustomed to wandering, finds itself naturally tethered to something undeniably real: the breath, the body, the present moment.</p>
 
  <figure>
   <img src="../images/sunset_teide.jpg" alt="View over the Teide">
