--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 </div>
 
-    <!-- 1. Presence Through Breathing Essay Preview (image left / text right) -->
+    <!-- 1. The Mental Benefits of Deep Breathing Essay Preview (image left / text right) -->
 <div class="essay-preview">
   <div class="essay-image">
     <img src="images/sunset_teide.jpg" alt="View over the Teide">
@@ -53,7 +53,7 @@
 
   <div class="essay-text">
    <nav class="article-index">calm<span class="after">essay</span></nav>
-    <h2><a href="essays/presence_through_breathing.html">Presence Through Breathing</a></h2>
+    <h2><a href="essays/presence_through_breathing.html">The Mental Benefits of Deep Breathing</a></h2>
     <p>A great majority of people will say that life is accelerating the older they get, that the years seem to…</p>
   </div>
 </div>
