--- a/essays/poem.html
+++ b/essays/poem.html
@@ -100,8 +100,7 @@
       One might find refuge through distance instead<br>
       for repair demands we face our hidden parts<br>
       And thus such questioning may overwhelm<br>
-      Yet, two truths can be held<br>
-      through gentle wisdom<br>
+      Yet, two truths can be held through gentle wisdom<br>
       For love, true love, is never an easy task</p>
 
 
