--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
   </div>
 </div>
 
+   <!-- 1. The People who teach us Essay Preview (image right / text left) -->
+<div class="essay-preview reverse">
+  <div class="essay-image">
+    <img src="images/friendship_sunset.jpg" alt="Painting by Per (Pelle) Adolf Swedlund [1865-1947]">
+  </div>
+
+  <div class="essay-text">
+   <nav class="article-index">relationship<span class="after">essay</span></nav>
+    <h2><a href="essays/people_who_teach_us.html">The People who Teach Us</a></h2>
+    <p>As we move through life, we may encounter people in unexpected ways, forming bonds we never anticipated. Sometimes these connections…</p>
+  </div>
+</div>
+
   </main>
 
 <footer>
