--- a/essays/people_who_teach_us.html
+++ b/essays/people_who_teach_us.html
@@ -20,6 +20,10 @@
   <figcaption>Painting by Per (Pelle) Adolf Swedlund [1865-1947]</figcaption>
 </figure>
 
+<p><em>I first met her at the Tandem evening organized by the University of Freiburg. I was first at the Spanish table, but at some point, feeling a bit tired as I was not yet fluent in the language, I wandered over to the nearby French table, hoping to find an engaging conversation. That’s when she appeared. She seemed a little shy, unsure whether to join, stating that her French was limited, even though it was, in my opinion, quite good. She had a gentle, warm smile that immediately caught my attention. She had black hair, full lips, and large, expressive brown eyes. Her voice was soft yet quietly expressive, carrying a gentle rhythm that made her words feel reassuring. It was late autumn and she was bundled up in thick layers by which I concluded she might always feel a little cold.</em></p>
+
+<p><em>We were joined by a third person, and that brief exchange marked my first real interaction with her. I remember the conversation drifting toward the question of the Earth’s finite resources—a subject that carried particular weight for me at the time, as I was an undergraduate student in geology. The topic stirred something in me, and she listened closely, following my thoughts with genuine interest. Before we parted, I mentioned a book I had recently read—one that claimed to offer solutions to our future societal challenges, yet devoted barely a page to the ever-growing demand for mineral resources. I hadn’t liked it much and had written a critical comment about it. A few days later, to my surprise, she told me she had read that comment and was deeply impressed by it. A seemingly small act that left a strong impression on me.</em></p>
+
 <p>(...)</p>
 
  </article>
