--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
 
   <div class="essay-text">
-   <nav class="article-index">relationship<span class="after">essay</span></nav>
+   <nav class="article-index">relationship<span class="after">story</span></nav>
     <h2><a href="essays/people_who_teach_us.html">The People who Teach Us</a></h2>
     <p>As we move through life, we may encounter people in unexpected ways, forming bonds we never anticipated. Sometimes these connections…</p>
   </div>
