--- a/index.html
+++ b/index.html
@@ -12,12 +12,25 @@
   <header class="site-header">
     <h1>Wisdom in Motion</h1>
     <p class="intro-text">
-      These essays are invitations—to slow down, to reflect. What is offered here is not instruction but companionship: a shared attempt to understand ourselves and those around us more honestly in the world we move through.
+      These essays are invitations — to slow down, to reflect. What is offered here is not instruction but companionship: a shared attempt to understand ourselves and those around us more honestly in the world we move through.
     </p>
   </header>
 
   <!-- MAIN CONTENT -->
   <main class="essay-list">
+
+      <!-- 1. Trail Running Essay Preview (image right / text left) -->
+<div class="essay-preview reverse">
+  <div class="essay-image">
+    <img src="images/rucksack.jpg" alt="30-liter rucksack packed for 2 1/2 weeks of travel">
+  </div>
+
+  <div class="essay-text">
+   <nav class="article-index">leisure<span class="after">advice</span></nav>
+    <h2><a href="essays/packing_light.html">Packing light</a></h2>
+    <p>Packing only the necessary is a skill, one which comes with experience strengthened with the number of travels undertaken. Carrying…</p>
+  </div>
+</div>
 
     <!-- 1. Trail Running Essay Preview (image left / text right) -->
 <div class="essay-preview">
