--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <title>Wisdom in Motion</title>
   <link rel="stylesheet" href="index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RS6DPMYXP1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-RS6DPMYXP1');
+  </script>
+  <!-- End Google Analytics -->
+
 </head>
 <body>
 
