--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   </script>
   <!-- End Google Analytics -->
 
+  <script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/ed15d64a3219b.js" data-cmp-host="a.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
+
 </head>
 <body>
 
